fix alignment repos

--- a/public/global.css
+++ b/public/global.css
@@ -90,3 +90,9 @@ section {
 .btn:hover::after {
     margin-top:-8px;
 }
+.content {
+	position: relative;
+	height: 100%;
+	overflow-x: hidden;
+	overflow-y: auto;
+}
